# worldcuptravel

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  render.yaml  start.sh
.github/workflows/: ci.yml  refresh-render.yml
analytics/: .user.yml  dbt_project.yml  profiles.yml
analytics/macros/: haversine_km.sql  normalize_ground.sql
analytics/models/: schema.yml
analytics/seeds/: team_aliases.csv  venue_aliases.csv  venue_coordinates.csv
analytics/tests/: assert_cumulative_distance_monotonic.sql  assert_legs_connect_consecutive_matches.sql  assert_no_self_legs.sql  assert_nonnegative_distances.sql  assert_scheduled_matches_not_played.sql  assert_unique_team_sequences.sql  assert_unique_travel_legs.sql  assert_valid_latitude.sql  assert_valid_longitude.sql
app/: __init__.py  database.py  dependencies.py  main.py  settings.py
app/api/: v1.py
app/schemas/: api.py
app/services/: data_refresh.py  ingestion.py  routes.py  venue_enrichment.py
docs/: architecture.md  data-model.md  deployment-render.md  methodology.md  venue-enrichment.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.css  App.tsx
scripts/: build_full_venue_seed.py  dbt_build.py  debug_legs.py  extract_venues.py  generate_favicon.py  generate_venue_coordinates.py  ingest.py  venue_reference_data.json  venues_report.py  verify_stats.py
tests/integration/: test_api.py
tests/unit/: __init__.py  test_haversine.py  (+1 more)
(+38 files in other folders)
